# DropMan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ANIMATION.md  ARCHITECTURE.md  ROADMAP.md  STATE_MACHINE.md
kwin/dropman/: metadata.json
kwin/dropman/contents/code/: main.js
kwin/dropman/contents/config/: dropdowns.json
kwin/effects/dropman_slide/: metadata.json
kwin/effects/dropman_slide/contents/code/: main.js
kwin/effects/dropman_slide/contents/config/: main.xml
scripts/: clean-dropman-claims.py  install-kwin-effect.sh  install-kwin-script.sh  sync-dropman-shortcuts.py
src/: KWinBackend.cpp  KWinBackend.h  MainWindow.cpp  MainWindow.h  Profile.h  ProfileModel.cpp  ProfileModel.h  ProfileStore.cpp  ProfileStore.h
